--- a/Oxide.Ext.BriansMod/Oxide.Ext.BriansMod.csproj
+++ b/Oxide.Ext.BriansMod/Oxide.Ext.BriansMod.csproj
@@ -70,13 +70,14 @@
     <Compile Include="Data.cs" />
     <Compile Include="IChat.cs" />
     <Compile Include="IConsole.cs" />
-    <Compile Include="IInjuryTracker.cs" />
-    <Compile Include="InjuryTracker.cs" />
+    <Compile Include="IInjuries.cs" />
+    <Compile Include="Injuries.cs" />
+    <Compile Include="ITraps.cs" />
     <Compile Include="Model\Injury.cs" />
-    <Compile Include="DeathResolver.cs" />
+    <Compile Include="Deaths.cs" />
     <Compile Include="IConfiguration.cs" />
     <Compile Include="IData.cs" />
-    <Compile Include="IDeathResolver.cs" />
+    <Compile Include="IDeaths.cs" />
     <Compile Include="ILogger.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Model\PvpDeath.cs" />
@@ -84,6 +85,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BriansModPluginLoader.cs" />
     <Compile Include="BriansModExtension.cs" />
+    <Compile Include="Traps.cs" />
     <Compile Include="Util.cs" />
   </ItemGroup>
   <ItemGroup>
