Wrap Unity stuff, add tests.

--- a/Oxide.Ext.BriansMod/Oxide.Ext.BriansMod.csproj
+++ b/Oxide.Ext.BriansMod/Oxide.Ext.BriansMod.csproj
@@ -64,29 +64,56 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Chat.cs" />
-    <Compile Include="Configuration.cs" />
-    <Compile Include="Console.cs" />
-    <Compile Include="Data.cs" />
-    <Compile Include="IChat.cs" />
-    <Compile Include="IConsole.cs" />
-    <Compile Include="IInjuries.cs" />
-    <Compile Include="Injuries.cs" />
-    <Compile Include="ITraps.cs" />
-    <Compile Include="Model\Injury.cs" />
-    <Compile Include="Deaths.cs" />
-    <Compile Include="IConfiguration.cs" />
-    <Compile Include="IData.cs" />
-    <Compile Include="IDeaths.cs" />
-    <Compile Include="ILogger.cs" />
-    <Compile Include="Logger.cs" />
-    <Compile Include="Model\PvpDeath.cs" />
     <Compile Include="BriansModPlugin.cs" />
+    <Compile Include="Services\Chat.cs" />
+    <Compile Include="Services\Configuration.cs" />
+    <Compile Include="Services\Console.cs" />
+    <Compile Include="Services\Data.cs" />
+    <Compile Include="Services\IChat.cs" />
+    <Compile Include="Services\IConsole.cs" />
+    <Compile Include="Services\IInjuries.cs" />
+    <Compile Include="Services\Injuries.cs" />
+    <Compile Include="Services\IPlayers.cs" />
+    <Compile Include="Services\ITraps.cs" />
+    <Compile Include="Services\IWrapper.cs" />
+    <Compile Include="Model\IAttackEntity.cs" />
+    <Compile Include="Model\IBaseCorpse.cs" />
+    <Compile Include="Model\IBaseNpc.cs" />
+    <Compile Include="Model\IHitInfo.cs" />
+    <Compile Include="Model\Injury.cs" />
+    <Compile Include="Services\Deaths.cs" />
+    <Compile Include="Services\IConfiguration.cs" />
+    <Compile Include="Services\IData.cs" />
+    <Compile Include="Services\IDeaths.cs" />
+    <Compile Include="Services\ILogger.cs" />
+    <Compile Include="Services\Logger.cs" />
+    <Compile Include="Model\PvpDeath.cs" />
+    <Compile Include="BriansModPluginGlue.cs" />
+    <Compile Include="Services\Players.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BriansModPluginLoader.cs" />
     <Compile Include="BriansModExtension.cs" />
-    <Compile Include="Traps.cs" />
-    <Compile Include="Util.cs" />
+    <Compile Include="Services\Traps.cs" />
+    <Compile Include="Services\Util.cs" />
+    <Compile Include="Model\IBaseCombatEntity.cs" />
+    <Compile Include="Model\IBasePlayer.cs" />
+    <Compile Include="Model\IDeployer.cs" />
+    <Compile Include="Model\IHeldEntity.cs" />
+    <Compile Include="Model\IMonoBehavior.cs" />
+    <Compile Include="Model\IBaseEntity.cs" />
+    <Compile Include="Model\ITrap.cs" />
+    <Compile Include="Services\Wrapper.cs" />
+    <Compile Include="Wrappers\WrappedBaseCorpse.cs" />
+    <Compile Include="Wrappers\WrappedBaseNpc.cs" />
+    <Compile Include="Wrappers\WrappedAttackEntity.cs" />
+    <Compile Include="Wrappers\WrappedBaseCombatEntity.cs" />
+    <Compile Include="Wrappers\WrappedBaseEntity.cs" />
+    <Compile Include="Wrappers\WrappedBasePlayer.cs" />
+    <Compile Include="Wrappers\WrappedDeployer.cs" />
+    <Compile Include="Wrappers\WrappedHeldEntity.cs" />
+    <Compile Include="Wrappers\WrappedHitInfo.cs" />
+    <Compile Include="Wrappers\WrappedMonoBehavior.cs" />
+    <Compile Include="Wrappers\WrappedTrap.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
