More tests, refactoring.

--- a/Oxide.Ext.BriansMod.Tests/Oxide.Ext.BriansMod.Tests.csproj
+++ b/Oxide.Ext.BriansMod.Tests/Oxide.Ext.BriansMod.Tests.csproj
@@ -64,6 +64,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataTests.cs" />
     <Compile Include="PluginHookTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -75,6 +76,11 @@
       <Project>{89f02c4c-1b90-4484-850b-32d33a2c4b30}</Project>
       <Name>Oxide.Ext.BriansMod</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="sqlite3.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
