Fix NRE, Schema updates, not null asserts.

--- a/Oxide.Ext.BriansMod.Tests/Oxide.Ext.BriansMod.Tests.csproj
+++ b/Oxide.Ext.BriansMod.Tests/Oxide.Ext.BriansMod.Tests.csproj
@@ -65,6 +65,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataTests.cs" />
+    <Compile Include="InjuriesTests.cs" />
     <Compile Include="PluginHookTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
