--- a/Oxide.Ext.BriansMod/Oxide.Ext.BriansMod.csproj
+++ b/Oxide.Ext.BriansMod/Oxide.Ext.BriansMod.csproj
@@ -36,10 +36,6 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\lib\Assembly-CSharp.dll</HintPath>
     </Reference>
-    <Reference Include="Facepunch, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\lib\Facepunch.dll</HintPath>
-    </Reference>
     <Reference Include="Oxide.Core, Version=1.0.0.0, Culture=neutral, processorArchitecture=AMD64">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\lib\Oxide.Core.dll</HintPath>
@@ -65,6 +61,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BriansModPlugin.cs" />
+    <Compile Include="Model\Data\PvpDeathRow.cs" />
+    <Compile Include="Model\Data\WeaponStatsRow.cs" />
     <Compile Include="Services\Chat.cs" />
     <Compile Include="Services\Configuration.cs" />
     <Compile Include="Services\Console.cs" />
