--- a/Oxide.Ext.BriansMod/Oxide.Ext.BriansMod.csproj
+++ b/Oxide.Ext.BriansMod/Oxide.Ext.BriansMod.csproj
@@ -63,6 +63,8 @@
     <Compile Include="BriansModPlugin.cs" />
     <Compile Include="Model\Data\PvpDeathRow.cs" />
     <Compile Include="Model\Data\WeaponStatsRow.cs" />
+    <Compile Include="Model\IConnection.cs" />
+    <Compile Include="Model\IPlayerInventory.cs" />
     <Compile Include="Services\Chat.cs" />
     <Compile Include="Services\Configuration.cs" />
     <Compile Include="Services\Console.cs" />
@@ -107,10 +109,12 @@
     <Compile Include="Wrappers\WrappedBaseCombatEntity.cs" />
     <Compile Include="Wrappers\WrappedBaseEntity.cs" />
     <Compile Include="Wrappers\WrappedBasePlayer.cs" />
+    <Compile Include="Wrappers\WrappedConnection.cs" />
     <Compile Include="Wrappers\WrappedDeployer.cs" />
     <Compile Include="Wrappers\WrappedHeldEntity.cs" />
     <Compile Include="Wrappers\WrappedHitInfo.cs" />
     <Compile Include="Wrappers\WrappedMonoBehavior.cs" />
+    <Compile Include="Wrappers\WrappedPlayerInventory.cs" />
     <Compile Include="Wrappers\WrappedTrap.cs" />
   </ItemGroup>
   <ItemGroup>
