Better file organization.

--- a/Oxide.Ext.BriansMod/Oxide.Ext.BriansMod.csproj
+++ b/Oxide.Ext.BriansMod/Oxide.Ext.BriansMod.csproj
@@ -63,30 +63,30 @@
     <Compile Include="BriansModPlugin.cs" />
     <Compile Include="Model\Data\PvpDeathRow.cs" />
     <Compile Include="Model\Data\WeaponStatsRow.cs" />
-    <Compile Include="Model\IConnection.cs" />
-    <Compile Include="Model\IPlayerInventory.cs" />
+    <Compile Include="Model\Rust\Contracts\IConnection.cs" />
+    <Compile Include="Model\Rust\Contracts\IPlayerInventory.cs" />
     <Compile Include="Model\PlayerFindResult.cs" />
     <Compile Include="Services\Chat.cs" />
     <Compile Include="Services\Configuration.cs" />
     <Compile Include="Services\Console.cs" />
     <Compile Include="Services\Data.cs" />
-    <Compile Include="Services\IChat.cs" />
-    <Compile Include="Services\IConsole.cs" />
-    <Compile Include="Services\IInjuries.cs" />
+    <Compile Include="Services\Contracts\IChat.cs" />
+    <Compile Include="Services\Contracts\IConsole.cs" />
+    <Compile Include="Services\Contracts\IInjuries.cs" />
     <Compile Include="Services\Injuries.cs" />
-    <Compile Include="Services\IPlayers.cs" />
-    <Compile Include="Services\ITraps.cs" />
-    <Compile Include="Services\IWrapper.cs" />
-    <Compile Include="Model\IAttackEntity.cs" />
-    <Compile Include="Model\IBaseCorpse.cs" />
-    <Compile Include="Model\IBaseNpc.cs" />
-    <Compile Include="Model\IHitInfo.cs" />
+    <Compile Include="Services\Contracts\IPlayers.cs" />
+    <Compile Include="Services\Contracts\ITraps.cs" />
+    <Compile Include="Services\Contracts\IWrapper.cs" />
+    <Compile Include="Model\Rust\Contracts\IAttackEntity.cs" />
+    <Compile Include="Model\Rust\Contracts\IBaseCorpse.cs" />
+    <Compile Include="Model\Rust\Contracts\IBaseNpc.cs" />
+    <Compile Include="Model\Rust\Contracts\IHitInfo.cs" />
     <Compile Include="Model\Injury.cs" />
     <Compile Include="Services\Deaths.cs" />
-    <Compile Include="Services\IConfiguration.cs" />
-    <Compile Include="Services\IData.cs" />
-    <Compile Include="Services\IDeaths.cs" />
-    <Compile Include="Services\ILogger.cs" />
+    <Compile Include="Services\Contracts\IConfiguration.cs" />
+    <Compile Include="Services\Contracts\IData.cs" />
+    <Compile Include="Services\Contracts\IDeaths.cs" />
+    <Compile Include="Services\Contracts\ILogger.cs" />
     <Compile Include="Services\Logger.cs" />
     <Compile Include="Model\PvpDeath.cs" />
     <Compile Include="BriansModPluginGlue.cs" />
@@ -95,29 +95,29 @@
     <Compile Include="BriansModPluginLoader.cs" />
     <Compile Include="BriansModExtension.cs" />
     <Compile Include="Services\Traps.cs" />
-    <Compile Include="Services\Util.cs" />
-    <Compile Include="Model\IBaseCombatEntity.cs" />
-    <Compile Include="Model\IBasePlayer.cs" />
-    <Compile Include="Model\IDeployer.cs" />
-    <Compile Include="Model\IHeldEntity.cs" />
-    <Compile Include="Model\IMonoBehavior.cs" />
-    <Compile Include="Model\IBaseEntity.cs" />
-    <Compile Include="Model\ITrap.cs" />
+    <Compile Include="Util.cs" />
+    <Compile Include="Model\Rust\Contracts\IBaseCombatEntity.cs" />
+    <Compile Include="Model\Rust\Contracts\IBasePlayer.cs" />
+    <Compile Include="Model\Rust\Contracts\IDeployer.cs" />
+    <Compile Include="Model\Rust\Contracts\IHeldEntity.cs" />
+    <Compile Include="Model\Rust\Contracts\IMonoBehavior.cs" />
+    <Compile Include="Model\Rust\Contracts\IBaseEntity.cs" />
+    <Compile Include="Model\Rust\Contracts\ITrap.cs" />
     <Compile Include="Services\Wrapper.cs" />
     <Compile Include="TextTable.cs" />
-    <Compile Include="Wrappers\WrappedBaseCorpse.cs" />
-    <Compile Include="Wrappers\WrappedBaseNpc.cs" />
-    <Compile Include="Wrappers\WrappedAttackEntity.cs" />
-    <Compile Include="Wrappers\WrappedBaseCombatEntity.cs" />
-    <Compile Include="Wrappers\WrappedBaseEntity.cs" />
-    <Compile Include="Wrappers\WrappedBasePlayer.cs" />
-    <Compile Include="Wrappers\WrappedConnection.cs" />
-    <Compile Include="Wrappers\WrappedDeployer.cs" />
-    <Compile Include="Wrappers\WrappedHeldEntity.cs" />
-    <Compile Include="Wrappers\WrappedHitInfo.cs" />
-    <Compile Include="Wrappers\WrappedMonoBehavior.cs" />
-    <Compile Include="Wrappers\WrappedPlayerInventory.cs" />
-    <Compile Include="Wrappers\WrappedTrap.cs" />
+    <Compile Include="Model\Rust\WrappedBaseCorpse.cs" />
+    <Compile Include="Model\Rust\WrappedBaseNpc.cs" />
+    <Compile Include="Model\Rust\WrappedAttackEntity.cs" />
+    <Compile Include="Model\Rust\WrappedBaseCombatEntity.cs" />
+    <Compile Include="Model\Rust\WrappedBaseEntity.cs" />
+    <Compile Include="Model\Rust\WrappedBasePlayer.cs" />
+    <Compile Include="Model\Rust\WrappedConnection.cs" />
+    <Compile Include="Model\Rust\WrappedDeployer.cs" />
+    <Compile Include="Model\Rust\WrappedHeldEntity.cs" />
+    <Compile Include="Model\Rust\WrappedHitInfo.cs" />
+    <Compile Include="Model\Rust\WrappedMonoBehavior.cs" />
+    <Compile Include="Model\Rust\WrappedPlayerInventory.cs" />
+    <Compile Include="Model\Rust\WrappedTrap.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
